--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "seed": "node prisma/seed.ts"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.3",
+    "@clerk/nextjs": "6.9.3",
     "@faker-js/faker": "^9.3.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.0.1",
